[package]
name = "radixtree"
version = "0.1.1"
authors = ["Ilqjx <1695151719@qq.com>"]
edition = "2021"
description = "A radix trie implementation for router, and provides CRUD operations."
repository = "https://github.com/Ilqjx/radix-trie"
documentation = "https://github.com/Ilqjx/radix-trie"
readme = "README.md"
keywords = ["router", "radix", "tree"]
license = "MIT"
